# empp_pjt

./: .clang-format  .gitignore  .gitmodules  .mxproject  CMakeLists.txt  README.md  h750vbt6.ioc  stlink_h7.cfg
Core/Inc/: main.h
Core/Src/: gpio.c  main.c
UserApp/: Main.cpp  common_inc.h
cmake/stm32cubemx/: CMakeLists.txt
